fix: documentation dark mode. update links in the header

--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -34,10 +34,10 @@ html[data-theme='dark']{
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.3);
   /* background colors */
-  --ifm-background-color: #111;
-  --ifm-background-surface-color: #111;
+  --ifm-background-color: #1a4351;
+  --ifm-background-surface-color: #1a4351;
   /* background color TIP */
   --ifm-color-success-contrast-background: rgb(0,49,0);
 }
@@ -49,4 +49,9 @@ html[data-theme='dark']{
   --ifm-footer-color: var(--ifm-footer-link-color);
   --ifm-footer-link-color: var(--ifm-color-secondary);
   --ifm-footer-title-color: var(--ifm-color-white);
+} */
+
+/* .navbar__logo{
+  height: 3rem;
+  width: 3rem;
 } */
